# parameters-monitor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
cmake/: dependencies.cmake  flags.cmake
inc/graphs/: factory.hpp  helpers.hpp
inc/graphs/interfaces/: graph.hpp
inc/graphs/interfaces/dygraph/rangesamples/: graph.hpp
inc/graphs/interfaces/dygraph/rangetime/: graph.hpp
inc/monitoring/: factory.hpp
inc/monitoring/interfaces/: monitoring.hpp
inc/monitoring/interfaces/group/: monitoring.hpp
inc/monitoring/interfaces/rpi5/temperature/cpu/: monitoring.hpp
inc/monitoring/interfaces/rpi5/temperature/gpu/: monitoring.hpp
info/: info.txt
src/: main.cpp
src/group/: monitoring.cpp
src/rpi5/temperature/cpu/: monitoring.cpp
src/rpi5/temperature/gpu/: monitoring.cpp
tests/: CMakeLists.txt
tests/cmake/: dependencies.cmake  flags.cmake
tests/inc/: test_common.hpp
tests/src/: main.cpp
